--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  get:
-  sqflite:
   flutter:
     sdk: flutter
 
@@ -36,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  sqflite: ^2.2.4+1
 
 dev_dependencies:
   flutter_test:
